# tracer-aml-graph-intelligence

./: .gitignore  README.md  app.py  friendly.py  main.py  pyproject.toml  tracer_friendly.py  tracer_theme.py
.streamlit/: config.toml
app_data/: rings.json
app_data/sars/: ring_10.json  ring_10.md  ring_101.json  ring_101.md  ring_1079.md  ring_1104.json  ring_1194.json  ring_1194.md  ring_1439.md  ring_1560.json  ring_1560.md  ring_161.json  ring_161.md  ring_1690.json  ring_1690.md  ring_1830.json  ring_190.json  ring_1913.json  ring_22.json  ring_22.md  ring_2354.json  ring_2485.json  ring_2485.md  ring_2772.json  ring_2772.md  ring_355.md  ring_534.json  ring_534.md  ring_62.md  ring_68.md  ring_70.json  ring_70.md  ring_72.md  ring_75.json  ring_791.json  ring_791.md  ring_802.json  ring_802.md  ring_92.json  ring_98.json  (+1 more)
app_data/sars/sars/: ring_1079.json  ring_1104.md  ring_119.json  ring_119.md  ring_1439.json  ring_162.json  ring_162.md  ring_1705.json  ring_1705.md  ring_1830.md  ring_190.md  ring_1913.md  ring_197.json  ring_197.md  (+15 more)
models/: agreement.json  baseline_lgbm.txt  baseline_metrics.json  experiments.json  gat.pt  gnn_sage.pt  gnn_sage_metrics.json  investigator_eval.json  operating_point.json  ring_metrics.json  sage_tuned.pt
runs/: eval_set.json  human_labels.jsonl  judgments.jsonl
scripts/: build_graph.py  build_pyg_graph.py  eval_investigator.py  explore_raw.py  extract_rings.py  investigate.py  judge_sars.py  label_sars.py  make_features.py  operating_point.py  serve.py  train_baseline.py  train_gnn.py  train_v2.py  visualize_ring.py
