[project]
name = "tracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.2.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
]
