[project]
name = "tracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "kaggle>=2.2.3",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
    "uvicorn>=0.51.0",
]
